2007-12-22  Geoff Keating  <geoffk@geoffk.org>

	* GCC_Regression_Tester.wdgt/widget.html: Mark as HTML 4.01,
	which it now is, rather than XHTML, which it never was.
	(<head>): Mark as UTF-8.  Add title.  Move CSS to top of
	document, specify type.  Mark script as 'defer'.
	(updateContents): If loaded from HTTP, look for status in same
	place as widget.
	(gotContents): Use DOM methods to change text rather than innerHTML.
	(<body>): Eliminate unnecessary DIV element.
	* GCC_Regression_Tester.wdgt/Info.plist: Update version, copyright
	notice.

2006-09-05  Geoffrey Keating  <geoffk@apple.com>

	* btest-gcc.sh: .bad_compare has moved to toplevel from gcc/.

2006-01-18  Andrew Pinski  <pinskia@physics.uc.edu>

	* btest-gcc.sh: gcc.sum has moved to gcc/testsuite/gcc/gcc.sum.
	g++.sum has moved to gcc/testsuite/g++/g++.sum.
	objc.sum has moved to gcc/testsuite/objc/objc.sum.

2005-12-20  Geoffrey Keating  <geoffk@apple.com>

	* btest-gcc.sh: Support -j option.

2005-11-28  Geoffrey Keating  <geoffk@geoffk.org>

	* GCC Regression Tester.wdgt: Rename to GCC_Regression_Tester.wdgt.
	* GCC_Regression_Tester.wdgt/Info.plist
	(CFBundleDisplayName): Update for rename.
	(CFBundleName): Use shorter name.
	(CFBundleVersion): Update to 1.0.1.
	(CFBundleShortVersionString): Update to 1.0.1.
	(LSHasLocalizedDisplayName): New.
	(NSHumanReadableCopyright): New.
	* GCC_Regression_Tester.wdgt/de.lproj/InfoPlist.strings: New.
	* GCC_Regression_Tester.wdgt/en.lproj/InfoPlist.strings: New.
	* GCC_Regression_Tester.wdgt/ja.lproj/InfoPlist.strings: New.

	* GCC_Regression_Tester.wdgt/widget.html: Use max-age=30
	to help out intermediate caches.

2005-11-23  Geoffrey Keating  <geoffk@geoffk.org>

	* GCC Regression Tester.wdgt/widget.html: New file.
	* GCC Regression Tester.wdgt/Info.plist: New file.
	* GCC Regression Tester.wdgt/Icon.png: New file.
	* GCC Regression Tester.wdgt/Default.png: New file.
	* README: Describe new files.

2005-06-07  Hans-Peter Nilsson  <hp@bitrange.com>
